Fixed padding on header on mobile devices

--- a/src/SASS/header.sass
+++ b/src/SASS/header.sass
@@ -4,6 +4,10 @@ header
   padding-top: 10px
   padding-bottom: 140px
   background-color: #102e4a
+  @media (max-width: 775px)
+    padding-bottom: 70px
+  @media (max-width: 400px)
+    margin-top: 70px
 
   img
     margin-top: 140px
@@ -11,9 +15,7 @@ header
     width: 150px
     border-radius: 50%
     @media (max-width: 775px)
-      margin-top: 80px
-    @media (max-width: 400px)
-      margin-top: 70px
+      margin-top: 90px
 
   h1
     width: auto
@@ -30,3 +32,5 @@ header
     color: rgb(236, 184, 7)
     margin-top: 0
     margin-bottom: 30px
+    @media (max-width: 775px)
+      margin-bottom: 0
